--- a/src/components/styles/formNameUser.css
+++ b/src/components/styles/formNameUser.css
@@ -6,22 +6,52 @@
 .form{
     padding: 0;
     margin: 0;
-    padding:2em;
-    font-size: 1rem;
+    padding:0em;
+    font-size: 1.2rem;
      
 }
 
+
+
+
 .form__input{
-    background-color: rgb(184, 188, 188);
+background-image: url('/public/img/input\ experimento.png');
+
+padding: .3em .5em ;
+    /* background-color: rgb(184, 188, 188); */
     border-radius: .5em 0 0 .5em;
   width: 70%;
   font-size: inherit;
+  background-size:cover;
+  
+  
+  /* background-position:center; */
     
 }
 
+
+
+/* .form__input{
+    background-image: url('../../../img/tapiz\ pokemon-ultrasol-ultraluna-analisis-1510569184128.webp');
+    opacity: .8;
+    background-size: cover;
+    background-position:center;
+    
+    
+    padding: .6em 1.2em;
+    border-radius:.5em 0 0 .5em ;
+            border: 1.5px solid rgb(14, 13, 13); 
+    box-shadow: .2em .4em  .3em .1em rgba(71, 36, 36, 0.884);
+    text-shadow: 1px 1px rgba(41, 40, 40, 0.662);;
+     color: white;
+  } */
+
+
+
+
 .form__btn{
 
-
+    padding: .3em 1em;
     background-color: var(--Red);
     color: white;
     border-radius: 0 .5em .5em 0;
