--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
     margin: 0;
 }
 
-h1,h2 ,h3 ,h4, p, ul {
+h1,h2 ,h3 ,h4, p, ul, select {
     margin-top: 0;
     margin-bottom: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;    
