--- a/src/components/styles/formNameUser.css
+++ b/src/components/styles/formNameUser.css
@@ -6,8 +6,8 @@
 .form{
     padding: 0;
     margin: 0;
-    padding:0.3em;
-    font-size: 1.2rem;
+    padding:0em;
+    font-size: .8rem;
      
 }
 
@@ -23,6 +23,7 @@ padding: .3em .5em ;
   width: 70%;
   font-size: inherit;
   background-size:cover;
+ 
   
   
   /* background-position:center; */
@@ -58,8 +59,25 @@ padding: .3em .5em ;
     font-size: inherit;
   
 }
-/* 
-@media (max-width: 800px) {
+
+
+@media (min-width: 310px) {
+.form{
+
+    padding: .5em;
+    margin: 0;
+  
+    font-size: 1.2rem;
+     
+}
+.form__btn{
+
+    /* background-color: aqua; */
+  
+}
+}
+
+/* @media (max-width: 800px) {
 
     .form{
         max-height: 100vh;
@@ -92,4 +110,4 @@ padding: .3em .5em ;
         
         
     }
-} */
+}  */
