--- a/src/components/Pokedex/styles/pokeContainer.css
+++ b/src/components/Pokedex/styles/pokeContainer.css
@@ -31,8 +31,8 @@
     /* background-color: red; */
     width: 95%;
     display: grid;
-    /* grid-template-columns: repeat( auto-fit, minmax(240px, 1fr));
-    grid-template-columns: repeat( auto-fit, minmax(240px, 1fr)); */
+    /* grid-template-columns: repeat( auto-fit, minmax(240px, 1fr)); */
+   
     gap: 1em;
     margin-top: 1em;
     padding-top: 2em;
@@ -43,10 +43,24 @@
 } 
 
 
-@media (max-width: 576px){
+@media (min-width: 576px){
     .poke-container_with-pagination{
         width: 100%;
        
         
     }
+    .poke-container{
+        /* background-color: red; */
+        width: 95%;
+        display: grid;
+        grid-template-columns: repeat( auto-fit, minmax(240px, 1fr));
+       
+        gap: 1em;
+        margin-top: 1em;
+        padding-top: 2em;
+        row-gap: 3em;
+        justify-content: center;
+        align-items: center;
+
+}
 }
